feat: 蓝图建筑和配方一键修改
