# docs/swagger.json
@@ -223,6 +223,54 @@
                 }
             }
         },
+        "/blueprint/{id}/replace": {
+            "post": {
+                "description": "替换蓝图配方和建筑",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "blueprint"
+                ],
+                "summary": "替换蓝图配方和建筑",
+                "parameters": [
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/blueprint.ReplaceBlueprintRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "properties": {
+                                "code": {
+                                    "type": "integer"
+                                },
+                                "data": {
+                                    "$ref": "#/definitions/blueprint.ReplaceBlueprintResponse"
+                                },
+                                "msg": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/BadRequest"
+                        }
+                    }
+                }
+            }
+        },
         "/collection/{id}": {
             "get": {
                 "consumes": [
@@ -316,7 +364,7 @@
             }
         },
         "/collection/{id}/notify": {
-            "put": {
+            "post": {
                 "description": "更新通知",
                 "consumes": [
                     "application/json"
@@ -519,23 +567,6 @@
                 }
             }
         },
-        "blueprint.CreateProduct": {
-            "type": "object",
-            "properties": {
-                "count": {
-                    "type": "integer"
-                },
-                "icon_path": {
-                    "type": "string"
-                },
-                "item_id": {
-                    "type": "integer"
-                },
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
         "blueprint.CreateRequest": {
             "type": "object",
             "properties": {
@@ -565,7 +596,7 @@
                     "description": "蓝图产物",
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/blueprint.CreateProduct"
+                        "$ref": "#/definitions/blueprint.Product"
                     }
                 },
                 "tags": {
@@ -702,6 +733,66 @@
                 },
                 "name": {
                     "type": "string"
+                },
+                "upgrades": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                }
+            }
+        },
+        "blueprint.Replace": {
+            "type": "object",
+            "properties": {
+                "source": {
+                    "$ref": "#/definitions/blueprint.ReplaceItem"
+                },
+                "target,omitempty": {
+                    "$ref": "#/definitions/blueprint.ReplaceItem"
+                }
+            }
+        },
+        "blueprint.ReplaceBlueprintRequest": {
+            "type": "object",
+            "properties": {
+                "building": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/blueprint.Replace"
+                    }
+                },
+                "recipe": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/blueprint.Replace"
+                    }
+                }
+            }
+        },
+        "blueprint.ReplaceBlueprintResponse": {
+            "type": "object"
+        },
+        "blueprint.ReplaceItem": {
+            "type": "object",
+            "properties": {
+                "icon_path": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "item_id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "upgrades": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
                 }
             }
         },
@@ -793,7 +884,12 @@
             }
         },
         "collection.UpdateNotifyRequest": {
-            "type": "object"
+            "type": "object",
+            "properties": {
+                "blueprint_id": {
+                    "$ref": "#/definitions/primitive.ObjectID"
+                }
+            }
         },
         "collection.UpdateNotifyResponse": {
             "type": "object"
@@ -801,6 +897,10 @@
         "httputils.PageRequest": {
             "type": "object",
             "properties": {
+                "order": {
+                    "description": "Deprecated 请使用方法GetOrder",
+                    "type": "string"
+                },
                 "page": {
                     "description": "Deprecated 请使用方法GetPage",
                     "type": "integer"
@@ -808,6 +908,10 @@
                 "size": {
                     "description": "Deprecated 请使用方法GetSize",
                     "type": "integer"
+                },
+                "sort": {
+                    "description": "Deprecated 请使用方法GetSort",
+                    "type": "string"
                 }
             }
         },
